--- a/javascript/learnCode.academy_youTube/jquery/base.css
+++ b/javascript/learnCode.academy_youTube/jquery/base.css
@@ -1,4 +1,19 @@
 
+.buttonsPanel {
+    margin: 2em;
+}
+
+.msg  {
+    font-size: 20px;
+}
+
+.commonPanel {
+    width: 50px;
+    height: 50px;
+    background-color: darkred;
+    margin: 10px;
+}
+
 .col-xs-3 {
     width: 250px;
     height: 250px;
