--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -14,9 +14,11 @@
         <input type="text" value="sample" id="input-text">
         <div id="list-commands"></div>
         <div id="list-items"></div>
-        <button id="add-todo">Add</button>
     </div>
-    <div id="diag"></div>
+    <div id="actions">
+        <button id="add-todo">Add</button>
+        <button id="delete-todo">Delete</button>
+    </div>
     <script src="../public/js/app.js"></script>
 </body>
 </html>
