--- a/todo/v1/public/css/base.css
+++ b/todo/v1/public/css/base.css
@@ -1,3 +1,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
 }
+
+#actions{
+    display: flex;
+    margin: 1em;
+}
