--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -11,13 +11,12 @@
     <h1>General todo list with basic functionality</h1>   
 
     <div class="list-container">
-        <input type="text" value="sample" id="input-text">
+        <input type="text" id="input-text">
         <div id="list-commands"></div>
-        <div id="list-items"></div>
+        <ul id="list-items"></ul>
     </div>
     <div id="actions">
         <button id="add-todo">Add</button>
-        <button id="delete-todo">Delete</button>
     </div>
     <script src="../public/js/app.js"></script>
 </body>
