--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -13,10 +13,16 @@
     <div class="list-container">
         <input type="text" id="input-text">
         <div id="list-commands"></div>
+        <h3>TODO</h3>
         <ul id="list-items"></ul>
+        <h3>COMPLETED</h3>
+        <ul id="completed-list-items"></ul>
     </div>
     <div id="actions">
         <button id="add-todo">Add</button>
+    </div>
+    <div id="command-bar">
+        input
     </div>
     <script src="../public/js/app.js"></script>
 </body>
