--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo v1 pure html css js</title>
-    <link rel="stylesheet" type="text/css" href="../public/css/base.css"/>
+    <link rel="stylesheet" type="text/css" href="../public/css/base.css" />
 </head>
+
 <body>
-    <h1>General todo list with basic functionality</h1>   
+    <h1>General todo list with basic functionality</h1>
 
     <div class="list-container">
         <input type="text" id="input-text">
         <div id="list-commands"></div>
         <h3>TODO</h3>
         <ul id="list-items"></ul>
-        <h3>COMPLETED</h3>
-        <ul id="completed-list-items"></ul>
     </div>
     <div id="actions">
         <button id="add-todo">Add</button>
     </div>
-    <div id="command-bar">
-        input
-    </div>
+    <div id="command-bar"></div>
     <script src="../public/js/app.js"></script>
 </body>
+
 </html>
