--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-    <h1>General todo list with basic functionality</h1>
 
     <div class="list-container">
-        <input type="text" id="input-text">
+        <input type="text" id="input-text" placeholder="enter todo item">
         <div id="list-commands"></div>
-        <h3>TODO</h3>
         <ul id="list-items"></ul>
     </div>
     <div id="actions">
-        <button id="add-todo">Add</button>
+        <button id="delete-all-completed">Delete completed</button>
+        <button id="delete-all">Delete all </button>
     </div>
-    <div id="command-bar"></div>
+    <div id="command-bar">
+     
+    </div>
     <script src="../public/js/app.js"></script>
 </body>
 
