--- a/todo/v1/views/index.html
+++ b/todo/v1/views/index.html
@@ -19,8 +19,10 @@
     <div id="actions">
         <button id="delete-all-completed">Delete completed</button>
         <button id="delete-all">Delete all </button>
+        <button id="show-hide-completed">Show/Hide completed</button>
     </div>
     <div id="command-bar">
+        <div id="counts"></div>    
      
     </div>
     <script src="../public/js/app.js"></script>
