--- a/todo/v3/views/index.html
+++ b/todo/v3/views/index.html
@@ -25,6 +25,7 @@
         <div id="counts"></div>    
      
     </div>
+    <script src="../public/js/Todo.js"></script>
     <script src="../public/js/app.js"></script>
 </body>
 
