--- a/todo/v5/views/index.html
+++ b/todo/v5/views/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo v1 pure html css js</title>
     <link rel="stylesheet" type="text/css" href="../public/css/base.css" />
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/handlebars/dist/handlebars.js"></script>
 </head>
 
 <body>
@@ -15,7 +17,25 @@
         <input type="text" id="input-text" placeholder="enter todo item">
         <div id="list-commands"></div>
         <ul id="todo-items"></ul>
+
+        <div id="todoItemContainer"></div>
+
+        <hr>
+        <script id="todoItemTemplate" type="text/x-handlebars-template">
+            {{#each this}}
+            <div class="todo-item-container2">
+                {{todoText}}
+                <button>Complete</button>
+                <button>Delete</button>
+            </div>
+            {{/each}}
+        </script>
     </div>
+
+    <br>
+    <br>
+    <hr>
+
     <div id="actions">
         <button id="delete-all-completed">Delete completed</button>
         <button id="delete-all">Delete all </button>
@@ -23,12 +43,12 @@
     </div>
 
     <div id="command-bar">
-        <div id="counts"></div>    
+        <div id="counts"></div>
     </div>
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../public/js/Todo.js" ></script>
-    <script src="../public/js/app.js" ></script>
+
+    <script src="../public/js/Todo.js"></script>
+    <script src="../public/js/app.js"></script>
 </body>
 
 </html>
