--- a/todo/v5/views/index.html
+++ b/todo/v5/views/index.html
@@ -7,42 +7,53 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo v1 pure html css js</title>
     <link rel="stylesheet" type="text/css" href="../public/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/uikit/dist/css/uikit.min.css" />
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/handlebars/dist/handlebars.js"></script>
+    <script src="../node_modules/uikit/dist/js/uikit.min.js"></script>
+    <script src="../node_modules/uikit/dist/js/uikit-icons.min.js"></script>
 </head>
 
 <body>
 
     <div class="rootContainer">
         <div class="todo-container">
-            <input type="text" id="input-text" placeholder="Todo...">
+            <input class="uk-input uk-form-width-medium uk-form-large" type="text" id="input-text" placeholder="Enter todo...">
             <div id="list-commands"></div>
 
             <div id="todo-items-container"></div>
 
-            <hr>
             <script id="todoItemTemplate" type="text/x-handlebars-template">
                 {{#each this}} {{#if isCompleted}}
 
                 <div class="todo-item-container done">
                     <span>{{todoText}}</span>
-                    <button class="delete">Delete</button>
+                    <button class="delete">
+                        delete
+                    </button>
                 </div>
                 {{else}}
                 <div class="todo-item-container">
                     <span>{{todoText}}</span>
-                    <button class="complete">Complete</button>
-                    <button class="delete">Delete</button>
+                    <button class="complete">
+                        complete
+                    </button>
+                    <button class="delete">
+                        delete
+                    </button>
                 </div>
 
                 {{/if}} {{/each}}
             </script>
         </div>
 
+        <br>
+        <hr>
+
         <div id="actions">
-            <button id="delete-all-completed">Delete Completed</button>
-            <button id="delete-all">Delete All </button>
-            <button id="show-hide-completed">Toggle Completed</button>
+            <button class="uk-button uk-button-default" id="delete-all-completed">Delete Completed</button>
+            <button class="uk-button uk-button-default" id="delete-all">Delete All </button>
+            <button class="uk-button uk-button-default" id="show-hide-completed">Toggle Completed</button>
         </div>
 
         <div id="command-bar">
