--- a/todo/v5/views/index.html
+++ b/todo/v5/views/index.html
@@ -7,17 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo v1 pure html css js</title>
     <link rel="stylesheet" type="text/css" href="../public/css/base.css" />
-    <link rel="stylesheet" type="text/css" href="../node_modules/uikit/dist/css/uikit.min.css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/mdbootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/mdbootstrap/css/mdb.css" />
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/handlebars/dist/handlebars.js"></script>
+    <script src="../node_modules/mdbootstrap/js/bootstrap.js"></script>
+    <script src="../node_modules/mdbootstrap/js/mdb.js"></script>
+    <script src="../node_modules/mdbootstrap/js/mdb.js"></script>
 </head>
 
 <body>
 
     <div class="rootContainer">
+        <br>
         <div class="todo-container">
             <div id="input-text-wrapper">
-                <input type="text" id="input-text" placeholder="Enter to do...">
+                <input type="text" id="input-text" class="form-control" placeholder="Enter to do...">
             </div>
 
             <div id="list-commands"></div>
@@ -29,18 +34,21 @@
 
                 <div class="todo-item-container done">
                     <span class="todoText">{{todoText}}</span>
-                    <button class="delete">
-                        delete
+                    <button class="btn btn-default delete" disabled>
+                        Done!
+                    </button>
+                    <button class="btn btn-default delete">
+                        Delete
                     </button>
                 </div>
                 {{else}}
                 <div class="todo-item-container">
                     <span class="todoText">{{todoText}}</span>
-                    <button class="complete">
-                        complete
+                    <button class="btn btn-default complete">
+                        Complete
                     </button>
-                    <button class="delete">
-                        delete
+                    <button class="btn btn-default delete">
+                        Delete
                     </button>
                 </div>
 
@@ -51,10 +59,10 @@
         <br>
         <hr>
 
-        <div id="actions">
-            <button id="delete-all-completed">Delete Completed</button>
-            <button id="delete-all">Delete All </button>
-            <button id="show-hide-completed">Toggle Completed</button>
+        <div id="actions" class="btn-group" role="group">
+            <button class="btn btn-primary" id="delete-all-completed">Delete Completed</button>
+            <button class="btn btn-primary" id="delete-all">Delete All </button>
+            <button class="btn btn-primary" id="show-hide-completed">Toggle Completed</button>
         </div>
 
         <div id="command-bar">
