--- a/theOdinProject/projects/calculator/src/views/index.html
+++ b/theOdinProject/projects/calculator/src/views/index.html
@@ -1,15 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calculator</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="../css/base.css">
+    </head>
 
-<body>
+    <body>
 
-</body>
+        <div class="outer-wrapper">
+            <div class="btn-container">
+                <div class="btn-border">
+                    <button class="btn">CE</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">C</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">BS</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">/</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">7</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">8</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">9</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">x</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">4</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">5</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">6</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">-</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">1</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">2</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">3</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">+</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">p/m</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">0</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">.</button>
+                </div>
+                <div class="btn-border">
+                    <button class="btn">eq</button>
+                </div>
+            </div>
+        </div>
+
+        </div>
+
+
+    </body>
 
 </html>
