--- a/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/App.css
+++ b/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/App.css
@@ -8,6 +8,9 @@ body {
 
 .appRoot {
     color: #fff;
-    font-family: 'Montserrat';
+    background-color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
