--- a/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/App.css
+++ b/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/App.css
@@ -1,16 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,600');
-body {
-    background: #262626;
-    color: #fff;
-    font-family: 'Montserrat';
-    margin: 0;
-}
+ * {
+     margin: 0;
+     padding: 0;
+ }
 
-.appRoot {
-    color: #fff;
-    background-color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
+ body {
+     background: #262626;
+     color: #fff;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ }
+
+ .appRoot {
+     display: grid;
+     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+ }
