YouTube - DesignCourse (Learn Electron in Less than 60 Minutes - crypto-app v3)
- threading a property to the card to signal changing the class of the price element to indicate increase, decrease, unchanged

--- a/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/CoinCurrencyCard.css
+++ b/electron/DesignCourse_youTube/crypto-app-v3/src/renderer/Components/CoinCurrencyCard.css
@@ -46,3 +46,15 @@
 .volContainerValueText {
     margin: var(--volContainerItemMargin);
 }
+
+.priceUp {
+    color: green;
+}
+
+.priceDown {
+    color: red;
+}
+
+.priceUnchanged {
+    color: white;
+}
