--- a/node/traversyMedia_youTube/node_express_from_scratch/views/index.pug
+++ b/node/traversyMedia_youTube/node_express_from_scratch/views/index.pug
@@ -5,4 +5,4 @@ block content
     hr
     ul 
         each val in articles
-            li= val.id + ": " + val.title + " - " + val.body
+            li= val.title + " - " + val.body + "(" + val.id  + ")"
