The Complete Node.js Developer Course (2nd Edition) - fundamentals

--- a/node/traversyMedia_youTube/node_express_from_scratch/views/add_article.pug
+++ b/node/traversyMedia_youTube/node_express_from_scratch/views/add_article.pug
@@ -11,5 +11,6 @@ block content
             input.form-control(name="author", type="text")
         #form-group
             label Body:
-            input.form-control(name="body", type="text")
+            textarea.form-control(name="body")
+        br
         input.btn.btn-primary(type="submit", value="submit")
