progress is progress

--- a/angular/tutorial1/src/app/app.component.css
+++ b/angular/tutorial1/src/app/app.component.css
@@ -15,11 +15,14 @@ body {
   margin: 2em;
 }
 
-body,
 input[type="text"],
 button {
-  color: #888;
+  color: #FF252525;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+body {
+  background-color: #444;
 }
 
 * {
