--- a/angular/tutorial1/src/app/app.component.html
+++ b/angular/tutorial1/src/app/app.component.html
@@ -1,9 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
+<h1>{{title}}</h1>
+<app-heroes></app-heroes>
 
 <router-outlet></router-outlet>
