working through the tutorial - routing

--- a/angular/tutorial1/src/app/app.component.html
+++ b/angular/tutorial1/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
-<app-messages></app-messages>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <br />
+  <a routerLink="/heroes">Heroes</a>
+</nav>
 <router-outlet></router-outlet>
+<app-messages></app-messages>
