--- a/angular/tutorial1/src/app/app.component.css
+++ b/angular/tutorial1/src/app/app.component.css
@@ -1,30 +1,35 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%
-}
+    /* AppComponent's private CSS styles */
+    h1 {
+      font-size: 1.2em;
+      color: #999;
+      margin-bottom: 0;
+    }
 
-h2,
-h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
+    h2 {
+      font-size: 2em;
+      margin-top: 0;
+      padding-top: 0;
+    }
 
-body {
-  margin: 2em;
-}
+    nav a {
+      padding: 5px 10px;
+      text-decoration: none;
+      margin-top: 10px;
+      display: inline-block;
+      background-color: #eee;
+      border-radius: 4px;
+    }
 
-input[type="text"],
-button {
-  color: #FF252525;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+    nav a:visited,
+    a:link {
+      color: #607d8b;
+    }
 
-body {
-  background-color: #444;
-}
+    nav a:hover {
+      color: #039be5;
+      background-color: #cfd8dc;
+    }
 
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
+    nav a.active {
+      color: #039be5;
+    }
